0.1.4

- Added support for Google App Engine SDK 1.1.9 (#18).  Thanks to Mahmoud Arram
  and hackerblinks for patches.

0.1.3

- Fixed bug in handling of modules shared between sandboxed and
  non-sandboxed code that caused sys.modules to be empty in sandbox
  (among other problems). Thanks to Kumar McMillan for the bug report
  (#2).
- Changed sys.path munging to ensure that libs that may be in google
  and system libraries are loaded from google's libdir. Thanks to
  Kumar McMillan for the bug report and patch (#6).
- Fixed bug in how the sandbox shared module set was maintained between
  entries into the sandbox, which could cause a cascade of import errors
  under certain arrangments of test and app code. Thanks to Kumar McMillan
  for the bug report (#7).
  
0.1.2

- Updated datastore handling to use a nosegae-specific datastore by
  default. This prevents the test run from clearing the default
  dev_appserver datastore, as would happen with earlier
  releases. Thanks to Andy for raising the issue.

0.1.1

- Updated self-test to use trestle so that the resulting documentation
  is more clear for end users.